Lists in relationIdent window now prechecked and not overflowing anymore. Expand/collapse on every level in item info grid. Glyphicon change. Corrected and improved feedback on latest relationMap version. Model info update on every save and query.

--- a/gui/web/app/styles/app.css
+++ b/gui/web/app/styles/app.css
@@ -104,10 +104,15 @@ body {
 /*** relationIdent ***/
 
 .relation-item-table {
-    height: 130px;
+    height: 150px;
+    overflow: auto;
 }
 
 /*** itemTable ***/
+
+.item-info-table td {
+    vertical-align: top;
+}
 
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
